--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,74 @@
-.grid {
+.container {
+    width: 500px;
+    align-content: center;
+  }
+
+  /* Setting the overall grid style */
+  
+  .grid {
     height: 400px;
     width: 400px;
     display: flex;
     flex-wrap: wrap;
-    background-color: gray;
-}
+    background-color: #dcd6bc;
+    margin-left: 50px;
+    margin-top: 20px;
+    border: 10px solid #dcd6bc;
+    margin-bottom: 10px;
+  }
+  
+  div {
+    font-size: 25px;
+    text-align: center;
+    font-family: 'Roboto Mono', monospace;
+  
+  }
 
-
-.grid div {
+  /* Setting the color for valid squares */
+  .valid {
     height: 40px;
     width: 40px;
-}
+    border: 5px solid;
+    border-color: #f5f3eb #bab7a9 #bab7a9 #fff9db;
+    box-sizing: border-box;
+  }
+  
+  .checked {
+    height: 40px;
+    width: 40px;
+    border: 2px solid;
+    background-color: #cecab7;
+    border-color: #9c998d;
+    box-sizing: border-box;
+  }
+  
+  .bomb {
+    height: 40px;
+    width: 40px;
+    border: 5px solid;
+    border-color: #f5f3eb #bab7a9 #bab7a9 #fff9db;
+    box-sizing: border-box;
+  }
 
-.checked {
-    background-color: red;
-}
-
-.bomb {
-    background-color: orange;
-}
+  /* Adding different colours for different bomb totals */
+  
+  .one {
+    color: #e76346;
+  }
+  
+  .two {
+    color: #4199d3;
+  }
+  
+  .three {
+    color: #57da59;
+  }
+  
+  .four{
+    color: #bb41d3;
+  }
+  
+  #result {
+    margin-top: 5px;
+    color: #e76346;
+  }
