--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,26 @@
 .container {
-    width: 500px;
+    /* width: 500px; */
     align-content: center;
+    max-width: 300px;
+    max-height: 300px;
   }
 
   /* Setting the overall grid style */
   
   .grid {
-    height: 400px;
-    width: 400px;
+    height: 300px;
+    width: 300px;
     display: flex;
     flex-wrap: wrap;
     background-color: #dcd6bc;
-    margin-left: 50px;
-    margin-top: 20px;
+    margin-left: 1.25rem;
+    margin-top: 10px;
     border: 10px solid #dcd6bc;
     margin-bottom: 10px;
   }
   
   div {
-    font-size: 25px;
+    /* font-size: 25px; */
     text-align: center;
     font-family: 'Roboto Mono', monospace;
   
@@ -26,16 +28,16 @@
 
   /* Setting the color for valid squares */
   .valid {
-    height: 40px;
-    width: 40px;
+    height: 30px;
+    width: 30px;
     border: 5px solid;
     border-color: #f5f3eb #bab7a9 #bab7a9 #fff9db;
     box-sizing: border-box;
   }
   
   .checked {
-    height: 40px;
-    width: 40px;
+    height: 30px;
+    width: 30px;
     border: 2px solid;
     background-color: #cecab7;
     border-color: #9c998d;
@@ -43,8 +45,8 @@
   }
   
   .bomb {
-    height: 40px;
-    width: 40px;
+    height: 30px;
+    width: 30px;
     border: 5px solid;
     border-color: #f5f3eb #bab7a9 #bab7a9 #fff9db;
     box-sizing: border-box;
@@ -68,7 +70,44 @@
     color: #bb41d3;
   }
   
+  .flags-left {
+    text-align: center;
+    margin-left: 4rem;
+    font-size: 1.25rem;
+  }
+
   #result {
     margin-top: 5px;
     color: #e76346;
+    font-size: 2rem;
+    margin-left: 3.5rem;
   }
+
+  #try-again {
+    display: none;
+    align-content: center;
+    font-size: 1.5rem;
+    margin-left: 6.5rem;
+    margin-top: 3rem;
+  }
+
+  #try-again:hover {
+    background-color: #484b4c;
+    color: white;
+  }
+
+
+  /* --------- Media queries */
+  /* Media Query: tablets and larger (768px and up) */
+@media screen and (min-width: 768px) {
+    .container {
+        margin-left: 11rem;
+    }
+}
+
+/* Media Query: laptops and desktops (1024px and up) */
+@media screen and (min-width: 1024px) {
+    .container {
+        margin-left: 11rem;
+    }
+}
